--- a/index.html
+++ b/index.html
@@ -1,244 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-  <link rel="icon" type="image/svg+xml"
-    href="data:image/svg+xml,
-    <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'>
-      <text x='50%' y='55%' dominant-baseline='middle' text-anchor='middle'
-        font-size='80' fill='white' transform='rotate(180 50 50)'>✝</text>
-    </svg>">
-
-
-  <meta property="og:url" content="https://JuJu.wtf/">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="JuJu">
-  <meta property="og:description" content=":3">
-  <meta property="og:image"
-        content="https://github.com/jujuexe/Juju-wtf/blob/main/cat%20pfp%20blue.png?raw=true">
-
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>♡ juju.wtf</title>
-
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-
-  <style>
-    * { box-sizing: border-box; }
-
-    :root {
-      --blue: #4da3ff;
-      --blue-soft: #7fbaff;
-      --bg: #05070c;
-    }
-
-    body {
-      margin: 0;
-      background: var(--bg);
-      color: #fff;
-      font-family: Inter, sans-serif;
-      height: 100vh;
-      overflow: hidden;
-    }
-
-    #background-video {
-      position: fixed;
-      inset: 0;
-      width: 100vw;
-      height: 100vh;
-      object-fit: cover;
-      z-index: -1;
-    }
-
- 
-    .intro-screen {
-      position: fixed;
-      inset: 0;
-      background: #000;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      font-size: 2rem;
-      cursor: pointer;
-      z-index: 100;
-      transition: opacity .5s ease;
-    }
-
-    .intro-screen img {
-      width: 120px;
-      height: 120px;
-      margin-bottom: 15px;
-      border-radius: 50%;
-      object-fit: cover;
-      box-shadow: 0 0 20px var(--blue);
-    }
-
-    .hidden {
-      opacity: 0;
-      pointer-events: none;
-    }
-
-    
-    .container {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .pfp {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      margin-bottom: 20px;
-      box-shadow: 0 0 25px var(--blue);
-      animation: pulseGlow 2s infinite ease-in-out;
-    }
-
-    .title {
-      font-size: 2rem;
-      letter-spacing: .1rem;
-      animation: pulseGlow 2s infinite ease-in-out;
-      transition: transform .3s ease;
-    }
-
-    @keyframes pulseGlow {
-      0%,100% {
-        text-shadow:
-          0 0 10px var(--blue),
-          0 0 25px var(--blue);
-      }
-      50% {
-        text-shadow:
-          0 0 20px var(--blue-soft),
-          0 0 40px var(--blue);
-      }
-    }
-
-    .discord-wrapper {
-      position: relative;
-      margin-top: 30px;
-    }
-
-    .discord-logo {
-      width: 32px;
-      height: 32px;
-      background-image: url('https://github.com/jujuexe/fr/blob/main/image.png?raw=true');
-      background-size: contain;
-      background-repeat: no-repeat;
-      filter: drop-shadow(0 0 10px var(--blue));
-      transition: transform .3s ease;
-      display: inline-block;
-      text-indent: -9999px;
-    }
-
-    .discord-logo:hover {
-      transform: scale(1.1);
-    }
-
-   
-    #audio-controls {
-      position: absolute;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(0,0,0,.7);
-      padding: 10px 20px;
-      border-radius: 10px;
-      text-align: center;
-      opacity: 0;
-      animation: fadeIn 1s forwards;
-    }
-
-    @keyframes fadeIn {
-      to { opacity: 1; }
-    }
-
-    
-    .sparkle {
-      position: fixed;
-      width: 8px;
-      height: 8px;
-      background: white;
-      border-radius: 50%;
-      pointer-events: none;
-      box-shadow:
-        0 0 10px var(--blue),
-        0 0 25px var(--blue);
-      animation: sparkleFade 1s forwards;
-    }
-
-    @keyframes sparkleFade {
-      to {
-        opacity: 0;
-        transform: scale(.5) translateY(-10px);
-      }
-    }
-  </style>
+<link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text x='50%' y='55%' dominant-baseline='middle' text-anchor='middle' font-size='80' fill='white' transform='rotate(180 50 50)'>✝</text></svg>">
+<meta property="og:url" content="https://JuJu.wtf/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="JuJu">
+<meta property="og:description" content=":3">
+<meta property="og:image" content="https://github.com/jujuexe/Juju-wtf/blob/main/cat%20pfp%20blue.png?raw=true">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>♡ juju.wtf</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+<style>
+*{box-sizing:border-box}
+:root{--b:#4da3ff;--bs:#7fbaff;--bg:#05070c}
+body{margin:0;background:var(--bg);color:#fff;font-family:Inter,sans-serif;height:100vh;overflow:hidden}
+#background-video{position:fixed;inset:0;width:100vw;height:100vh;object-fit:cover;z-index:-1}
+.intro-screen{position:fixed;inset:0;background:#000;display:flex;flex-direction:column;justify-content:center;align-items:center;font-size:2rem;cursor:pointer;z-index:100;transition:opacity .5s ease}
+.intro-screen img{width:120px;height:120px;border-radius:50%;margin-bottom:20px;box-shadow:0 0 25px var(--b);animation:pulse 2s infinite}
+.hidden{opacity:0;pointer-events:none}
+.container{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);text-align:center;display:flex;flex-direction:column;align-items:center}
+.pfp{width:100px;height:100px;border-radius:50%;margin-bottom:20px;box-shadow:0 0 30px var(--b);animation:pulse 2s infinite}
+.title{font-size:2rem;letter-spacing:.1rem;animation:pulse 2s infinite}
+@keyframes pulse{0%,100%{text-shadow:0 0 10px var(--b),0 0 25px var(--b)}50%{text-shadow:0 0 20px var(--bs),0 0 40px var(--b)}}
+.discord-wrapper{margin-top:30px}
+.discord-logo{width:32px;height:32px;background:url('https://github.com/jujuexe/fr/blob/main/image.png?raw=true') center/contain no-repeat;filter:drop-shadow(0 0 15px var(--b));display:inline-block;animation:pulse 2s infinite;text-indent:-9999px}
+#audio-controls{position:absolute;bottom:20px;left:50%;transform:translateX(-50%);background:rgba(0,0,0,.7);padding:10px 20px;border-radius:12px;animation:pulse 2s infinite}
+#pause-button{background:none;border:none;color:#fff;font-family:inherit;cursor:pointer;animation:pulse 2s infinite}
+.sparkle{position:fixed;width:2px;height:60px;background:linear-gradient(to top,transparent,var(--b));pointer-events:none;filter:drop-shadow(0 0 10px var(--b));animation:shoot .8s linear forwards}
+@keyframes shoot{from{opacity:1;transform:translate(0,0)}to{opacity:0;transform:translate(var(--dx),var(--dy))}}
+</style>
 </head>
-
 <body>
-
-  <div class="intro-screen" id="intro-screen">
-    <img src="https://github.com/jujuexe/Juju-wtf/blob/main/cat%20pfp%20blue.png?raw=true">
-    click to enter
-  </div>
-
-  <video id="background-video" loop playsinline>
-    <source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/Freestyle%20(1).mp4" type="video/mp4">
-  </video>
-
-  <div class="container">
-    <img class="pfp"
-      src="https://github.com/jujuexe/Juju-wtf/blob/main/cat%20pfp%20blue.png?raw=true">
-
-    <div class="title">JuJu.wtf</div>
-
-    <div class="discord-wrapper">
-      <a class="discord-logo"
-         href="https://discordapp.com/users/151014356476362752"
-         target="_blank"
-         rel="noopener">discord</a>
-    </div>
-  </div>
-
-  <div id="audio-controls">
-    <div>Now Playing: Freestyle</div>
-    <button id="pause-button">Pause ⏯</button>
-  </div>
-
-  <script>
-    const video = document.getElementById('background-video');
-    const intro = document.getElementById('intro-screen');
-    const pauseBtn = document.getElementById('pause-button');
-    let paused = false;
-
-    intro.onclick = () => {
-      intro.classList.add('hidden');
-      video.play();
-    };
-
-    pauseBtn.onclick = () => {
-      paused ? video.play() : video.pause();
-      pauseBtn.textContent = paused ? 'Pause ⏯' : 'Play ⏯';
-      paused = !paused;
-    };
-
-    document.addEventListener('mousemove', e => {
-      const s = document.createElement('div');
-      s.className = 'sparkle';
-      s.style.left = e.clientX + 'px';
-      s.style.top = e.clientY + 'px';
-      document.body.appendChild(s);
-      setTimeout(() => s.remove(), 1000);
-    });
-  </script>
-
+<div class="intro-screen" id="intro">
+<img src="https://github.com/jujuexe/Juju-wtf/blob/main/cat%20pfp%20blue.png?raw=true">
+<div class="title">click to enter</div>
+</div>
+<video id="background-video" loop playsinline>
+<source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/Freestyle%20(1).mp4" type="video/mp4">
+</video>
+<div class="container">
+<img class="pfp" src="https://github.com/jujuexe/Juju-wtf/blob/main/cat%20pfp%20blue.png?raw=true">
+<div class="title">JuJu.wtf</div>
+<div class="discord-wrapper">
+<a class="discord-logo" href="https://discordapp.com/users/151014356476362752" target="_blank" rel="noopener">discord</a>
+</div>
+</div>
+<div id="audio-controls">
+<div class="title">Now Playing: Freestyle</div>
+<button id="pause-button">Pause ⏯</button>
+</div>
+<script>
+const v=document.getElementById('background-video')
+const i=document.getElementById('intro')
+const p=document.getElementById('pause-button')
+let s=false
+i.onclick=()=>{i.classList.add('hidden');v.play()}
+p.onclick=()=>{s?v.play():v.pause();p.textContent=s?'Pause ⏯':'Play ⏯';s=!s}
+document.addEventListener('mousemove',e=>{
+for(let n=0;n<2;n++){
+const d=document.createElement('div')
+d.className='sparkle'
+d.style.left=e.clientX+'px'
+d.style.top=e.clientY+'px'
+d.style.setProperty('--dx',(Math.random()*200-100)+'px')
+d.style.setProperty('--dy',(-Math.random()*300)+'px')
+document.body.appendChild(d)
+setTimeout(()=>d.remove(),800)
+}})
+</script>
 </body>
 </html>
